[package]
name = "rsabpoa"
version = "0.3.1"
edition = "2021"
description = "abpoa rust binding"
license = "MIT"
repository ="https://github.com/keithyin/rsabpoa"

[dependencies]
lazy_static = "1.5"
rust-htslib="0.49.0"
gskits="0.13.0"
crossbeam = "0.8"
clap = {version="4.4", features=["derive"]}
num_cpus="1.16"

[[bin]]
name = "abpoa_consensus"
path = "src/bin/abpoa_consensus.rs"

[profile.release]
debug = true

